# krita

.github/: FUNDING.yml
krita/data/: CMakeLists.txt
krita/libbrush/: kis_brushes_pipe.h  kis_imagepipe_brush.cpp  kis_imagepipe_brush.h  kis_pipebrush_parasite.cpp  kis_pipebrush_parasite.h
krita/libpsd/: compression.cpp
krita/plugins/filters/autofill/: AutofillFilter.cpp  AutofillFilter.h  CMakeLists.txt  WdgAutofill.cpp  WdgAutofill.h  WdgAutofillOptions.ui  kritaautofillfilter.desktop
krita/plugins/formats/brush/: #krita_brush_import.desktop#  CMakeLists.txt  KisAnimatedBrushAnnotation.cpp  kis_brush_export.cpp  kis_brush_export.h  kis_brush_import.cpp  kis_brush_import.h  krita_brush_export.desktop  krita_brush_import.desktop  wdg_export_gbr.ui  wdg_export_gih.ui
krita/ui/: CMakeLists.txt  KisApplication.cpp  KisDocument.cpp  KisImportExportManager_p.cpp  KisPrintJob.cpp  kis_mask_manager.cc
libs/flake/: KoCanvasControllerWidgetViewport_p.cpp  KoColorBackground.cpp  KoConnectionShape.cpp  KoConnectionShapeConfigWidget.cpp  KoFilterEffectLoadingContext.cpp  KoFlake.cpp  KoGradientBackground.cpp  KoGradientHelper.cpp  KoGridData.cpp  KoGuidesData.cpp  KoImageData.cpp  KoOdfGradientBackground.cpp  KoOdfWorkaround.cpp  KoPathPoint.cpp  KoPathSegment.cpp  KoPathShape.cpp  KoPatternBackground.cpp  KoResourceManager_p.cpp  KoSelection.cpp  KoShape.cpp  KoShapeContainerDefaultModel.cpp  KoShapeController.cpp  KoShapeGroup.cpp  KoShapeManager.cpp  KoShapeSavingContext.cpp  KoShapeShadow.cpp  KoSnapGuide.cpp  KoSnapProxy.cpp  KoSnapStrategy.cpp  KoToolBase.cpp  (+2 more)
(+94 files in other folders)
